--- a/moveit-next/package.json
+++ b/moveit-next/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "12.12.2",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.0.5",
